--- a/index.html
+++ b/index.html
@@ -174,9 +174,11 @@
     </div>
   </div>
 </div>
+<!-- Section 5  -->
 <div class="portion-4">
   <img src="https://www.w3schools.com/w3images/map.jpg" alt="">
 </div>
+<!-- Footer  -->
 <footer>
 <div class="logo">
     <img src="./img/facebook.png" alt="">
